pkp/pkp-lib#8348 Fix incorrect use of  in email templates

--- a/locale/ca_ES/emails.po
+++ b/locale/ca_ES/emails.po
@@ -231,7 +231,7 @@ msgstr ""
 "importància per a l'editorial. Espero rebre notícies vostres ben aviat.<br />"
 "\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 #, fuzzy
 msgid "emails.editorDecisionAccept.subject"
@@ -431,4 +431,4 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Cordialment,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
