--- a/locale/cs_CZ/emails.po
+++ b/locale/cs_CZ/emails.po
@@ -49,7 +49,7 @@ msgstr ""
 "Potvrďte, prosím, svou schopnost dokončit tento zásadní příspěvek k práci "
 "tisku. Těším se na Vaši odpověď.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatické připomenutí recenze podání"
@@ -157,7 +157,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "S pozdravem,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Žádost o recenzi rukopisu"
@@ -333,7 +333,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Děkujeme,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Ověřte svůj účet"
@@ -349,7 +349,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Děkujeme,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateContext.subject"
 msgstr "Ověřte svůj účet"
