--- a/locale/el_GR/emails.po
+++ b/locale/el_GR/emails.po
@@ -189,7 +189,7 @@ msgstr ""
 "<br />\n"
 "Θα σας παρακαλούσαμε να μας επιβεβαιώσετε ότι είστε σε θέση να ολοκληρώσετε επιτυχώς την, τόσο σημαντική για το περιοδικό, εργασία της αξιολόγησης . Ελπίζουμε να λάβουμε σύντομα την απάντησή σας.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 #, fuzzy
 msgid "emails.editorDecisionAccept.subject"
