--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -51,7 +51,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Thank you,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Validate Your Account"
@@ -65,7 +65,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Thank you,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.reviewerRegister.subject"
 msgstr "Registration as Reviewer with {$contextName}"
@@ -176,7 +176,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Sincerely,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 ""
 
 msgid "emails.reviewCancel.subject"
@@ -259,7 +259,7 @@ msgstr ""
 "<br />\n"
 "Please confirm your ability to complete this vital contribution to the work of the press. I look forward to hearing from you.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.editorDecisionAccept.subject"
 msgstr "Your submission has been accepted to {$contextName}"
