--- a/locale/nb_NO/emails.po
+++ b/locale/nb_NO/emails.po
@@ -202,7 +202,7 @@ msgstr ""
 "Vi ber deg bekrefte om du er i stand til at fullføre dette vigtige bidraget "
 "til vårt arbeid. Jeg ser frem til at høre fra deg.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatisk påminnelse om fagfellevurdering"
@@ -313,7 +313,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Vennlig hilsen,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Forespørsel om fagfellevurdering"
