--- a/locale/da_DK/emails.po
+++ b/locale/da_DK/emails.po
@@ -275,7 +275,7 @@ msgstr ""
 "Vi beder dig bekræfte, at du er i stand til at fuldføre dette vigtige bidrag "
 "til tidsskriftets arbejde. Jeg ser frem til at høre fra dig.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRequest.subject"
 msgstr "Forespørgsel om bedømmelse af manuskript"
@@ -330,7 +330,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Mange hilsner<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.submissionAckNotAuthor.subject"
 msgstr "Indsendelsesbekræftelse"
@@ -436,7 +436,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Tak,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Valider din konto"
@@ -452,7 +452,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Tak,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateContext.subject"
 msgstr "Valider din konto"
