--- a/locale/hu_HU/emails.po
+++ b/locale/hu_HU/emails.po
@@ -37,7 +37,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Üdvözlettel,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Kézirat szakmai lektorálásának kérése"
@@ -223,7 +223,7 @@ msgstr ""
 "Kérjük, erősítse meg, hogy tudja vállalni ezt a fontos munkát a részünkre. "
 "Várjuk a válaszát.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatikus szakmai lektorálási emlékeztető"
@@ -477,7 +477,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Köszönettel,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Fiók megerősítése"
@@ -493,7 +493,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Köszönettel,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateContext.subject"
 msgstr "Fiók megerősítése"
