--- a/locale/pl_PL/emails.po
+++ b/locale/pl_PL/emails.po
@@ -285,7 +285,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Z poważaniem,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.submissionAckNotAuthor.body"
 msgstr ""
@@ -424,7 +424,7 @@ msgstr ""
 "Prosimy, potwierdź swoją gotowość do wniesienia tego znaczącego wkładu do "
 "pracy naszego wydawnictwa. Z niecierpliwością czekam na odpowiedź. <br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatyczne przypomnienie o recenzji zgłoszenia"
@@ -478,7 +478,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Dziękuę,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.editorDecisionSendToInternal.body"
 msgstr ""
@@ -529,4 +529,4 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Dziękujemy,<br />\n"
-"{$signature}"
+"{$contextSignature}"
