--- a/locale/tr_TR/emails.po
+++ b/locale/tr_TR/emails.po
@@ -202,7 +202,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Saygılarımızla,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.reviewCancel.subject"
 msgstr "Değerlendirme Talebi İptal Edildi"
@@ -312,7 +312,7 @@ msgstr ""
 "tamamlayabileceğinizi teyit ediniz. Cevabınızı sabırsızlıkla bekliyoruz.<br "
 "/>\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 #, fuzzy
 msgid "emails.editorDecisionAccept.subject"
