--- a/locale/it/emails.po
+++ b/locale/it/emails.po
@@ -64,7 +64,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Grazie,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Convalida il tuo account"
@@ -190,7 +190,7 @@ msgstr ""
 "La preghiamo di confermare la sua disponibilità a portare a termine questo "
 "contributo fondamentale per il lavoro della Casa Editrice. Grazie.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.editorDecisionAccept.subject"
 msgstr "La sua proposta è stata accettata da {$contextName}"
@@ -366,7 +366,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Cordialmente,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.userRegister.body"
 msgstr ""
@@ -395,7 +395,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Grazie,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
