--- a/locale/pl_PL/emails.po
+++ b/locale/pl_PL/emails.po
@@ -297,7 +297,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Z poważaniem,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.submissionAckNotAuthor.body"
 msgstr ""
@@ -436,7 +436,7 @@ msgstr ""
 "Prosimy, potwierdź swoją gotowość do wniesienia tego znaczącego wkładu do "
 "pracy naszego wydawnictwa. Z niecierpliwością czekam na odpowiedź. <br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatyczne przypomnienie o recenzji zgłoszenia"
@@ -490,7 +490,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Dziękuę,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.editorDecisionSendToInternal.body"
 msgstr ""
@@ -541,4 +541,4 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Dziękujemy,<br />\n"
-"{$signature}"
+"{$contextSignature}"
