--- a/locale/pt_BR/emails.po
+++ b/locale/pt_BR/emails.po
@@ -218,7 +218,7 @@ msgstr ""
 "<br />\n"
 "Confirme sua disponibilidade em concluir esta contribuição vital aos trabalhos da editora. Aguardamos seu contato.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.editorDecisionAccept.subject"
 msgstr "Sua submissão foi aceita para {$contextName}"
@@ -369,7 +369,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Atenciosamente,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.announcement.body"
 msgstr ""
@@ -430,7 +430,7 @@ msgstr ""
 "{$activateUrl} <br />\n"
 "<br />\n"
 "Obrigado, <br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Valide a sua conta"
@@ -446,7 +446,7 @@ msgstr ""
 "{$activateUrl} <br />\n"
 "<br />\n"
 "Obrigado, <br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateContext.subject"
 msgstr "Valide a sua conta"
