--- a/locale/pt_PT/emails.po
+++ b/locale/pt_PT/emails.po
@@ -186,7 +186,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Atentamente,<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Solicitação de Revisão de Manuscrito"
@@ -272,7 +272,7 @@ msgstr ""
 "Confirme se está disponível para concluir esta contribuição vital para o "
 "trabalho da editora. Ficamos a aguardar o seu contacto.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Lembrete automático de Revisão da Submissão"
@@ -481,7 +481,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Obrigado,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Valide a sua Conta"
@@ -497,7 +497,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Obrigado,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateContext.subject"
 msgstr "Valide a sua conta"
