--- a/locale/gl_ES/emails.po
+++ b/locale/gl_ES/emails.po
@@ -183,7 +183,7 @@ msgstr ""
 "Confirme a súa capacidade para completar esta contribución ao traballo da "
 "editorial. Ficamos a espera do seu contacto. <br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Recordatorio automático de revisión do envío"
@@ -291,7 +291,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Atentamente, <br />\n"
-"{$signature} <br />\n"
+"{$contextSignature} <br />\n"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Solicitude de revisión do manuscrito"
