--- a/locale/mk_MK/emails.po
+++ b/locale/mk_MK/emails.po
@@ -35,7 +35,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Со почит, <br />\n"
-"{$signature} <br />\n"
+"{$contextSignature} <br />\n"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Барање за преглед на ракописи"
@@ -227,7 +227,7 @@ msgstr ""
 "придонес во работата на печатот. Со нетрпение очекувам да се слушнам со вас. "
 "<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Автоматски потсетник за преглед на поднесок"
