--- a/locale/ru_RU/emails.po
+++ b/locale/ru_RU/emails.po
@@ -221,7 +221,7 @@ msgstr ""
 "Пожалуйста, подтвердите, что Вы сможете сделать этот важный вклад в работу "
 "нашего журнала. Жду вашего ответа.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.announcement.body"
 msgstr ""
@@ -470,4 +470,4 @@ msgstr ""
 "<br />\n"
 "Заранее благодарю Вас,<br />\n"
 "<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
