--- a/locale/uk_UA/emails.po
+++ b/locale/uk_UA/emails.po
@@ -73,7 +73,7 @@ msgstr ""
 "<br />\n"
 "<br />\n"
 "Щиро Ваш(а),<br />\n"
-"{$signature}<br />\n"
+"{$contextSignature}<br />\n"
 
 msgid "emails.reviewRequest.body"
 msgstr ""
@@ -313,7 +313,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Дякую,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.userValidateSite.body"
 msgstr ""
@@ -326,7 +326,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Дякую,<br />\n"
-"{$signature}"
+"{$siteSignature}"
 
 msgid "emails.userValidateSite.subject"
 msgstr "Підтвердіть Ваш обліковий запис"
@@ -566,7 +566,7 @@ msgstr ""
 "Будь ласка, підтвердіть свою здатність завершити цей життєво важливий внесок "
 "у роботу е-видавництва. З нетерпінням чекаємо Вашої відповіді.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Автоматичний нагадувач про рецензію на подання"
