pkp/pkp-lib#8423 Restore use of EDITOR_ASSIGN email template

--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -96,18 +96,48 @@ msgstr ""
 "{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
-msgstr "Editorial Assignment"
+msgstr "You have been assigned as an editor on a submission to {$contextName}"
 
 msgid "emails.editorAssign.body"
 msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"The submission, &quot;{$submissionTitle},&quot; to {$contextName} has been assigned to you to see through the editorial process in your role as an Editor.<br />\n"
-"<br />\n"
-"Submission URL: {$submissionUrl}<br />\n"
-"Username: {$recipientUsername}<br />\n"
-"<br />\n"
-"Thank you,"
+"<p>Dear {$recipientName},</p>"
+"<p>The following submission has been assigned to you to see through the editorial process.</p>"
+"<p><a href=\"{$submissionUrl}\">{$submissionTitle}</a><br />"
+"{$authors}</p>"
+"<p><b>Abstract</b></p>"
+"{$submissionAbstract}"
+"<p>If you find the submission to be relevant for {$contextName}, please forward the submission to the review stage by "
+"selecting \"Send to Internal Review\" and then assign reviewers by clicking \"Add Reviewer\".</p>"
+"<p>If the submission is not appropriate for this press, please decline the submission.</p>"
+"<p>Thank you in advance.</p>"
+"<p>Kind regards,</p>"
+"{$contextSignature}"
+
+msgid "emails.editorAssignReview.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>"
+"<p>The following submission has been assigned to you to see through the review stage.</p>"
+"<p><a href=\"{$submissionUrl}\">{$submissionTitle}</a><br />"
+"{$authors}</p>"
+"<p><b>Abstract</b></p>"
+"{$submissionAbstract}"
+"<p>Please login to <a href=\"{$submissionUrl}\">view the submission</a> and assign qualified reviewers. You can assign a reviewer by clicking \"Add Reviewer\".</p>"
+"<p>Thank you in advance.</p>"
+"<p>Kind regards,</p>"
+"{$signature}"
+
+msgid "emails.editorAssignProduction.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>"
+"<p>The following submission has been assigned to you to see through the production stage.</p>"
+"<p><a href=\"{$submissionUrl}\">{$submissionTitle}</a><br />"
+"{$authors}</p>"
+"<p><b>Abstract</b></p>"
+"{$submissionAbstract}"
+"<p>Please login to <a href=\"{$submissionUrl}\">view the submission</a>. Once production-ready files are available, upload them under the <strong>Publication > Publication Formats</strong> section.</p>"
+"<p>Thank you in advance.</p>"
+"<p>Kind regards,</p>"
+"{$signature}"
 
 msgid "emails.reviewRequest.subject"
 msgstr "Manuscript Review Request"
