pkp/pkp-lib#8503 Add more permanent mailing list signup URL

--- a/locale/da_DK/locale.po
+++ b/locale/da_DK/locale.po
@@ -1302,8 +1302,8 @@ msgstr ""
 "ind</a> med det brugernavn og adgangskode, der er indtastet på den forrige "
 "side.</p>\n"
 "<p>Hvis du ønsker at modtage nyheder og opdateringer, skal du "
-"<strong>registrere dig på <a href=\"https://lists.publicknowledgeproject.org/"
-"lists/\" target=\"_blank\">https://lists.publicknowledgeproject.org/lists/</"
+"<strong>registrere dig på <a href=\"https://pkp.sfu.ca/dev-updates-signup"
+"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</"
 "a>.</strong>. Hvis du har spørgsmål eller kommentarer, kan du besøge <a href="
 "\"https://forum.pkp.sfu.ca\" target=\"_blank\">supportforum</a>.</p>"
 
