--- a/locale/pt_PT/locale.po
+++ b/locale/pt_PT/locale.po
@@ -1291,8 +1291,8 @@ msgstr ""
 "<p>Para começar a utilizar o sistema, <a href=\"{$loginUrl}\">aceda</a> com "
 "o nome de utilizador e senha inseridos na página anterior.</p>\n"
 "<p>Se desejar receber notícias e novidades, <strong>registe-se em <a href="
-"\"https://lists.publicknowledgeproject.org/lists/\" target=\"_blank"
-"\">https://lists.publicknowledgeproject.org/lists/</a>.</strong> Se tiver "
+"\"https://pkp.sfu.ca/dev-updates-signup\" target=\"_blank"
+"\">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> Se tiver "
 "questões ou comentários, visite o <a href=\"http://forum.pkp.sfu.ca\" target="
 "\"_blank\">fórum de apoio</a>.</p>"
 
@@ -1302,8 +1302,8 @@ msgstr ""
 "<p>Não se esqueça de configurar como \"instalado\" no seu ficheiro de "
 "configuração <tt>config.inc.php</tt> de volta para <em>Ativo</em>.</p>\n"
 "<p>Se ainda não se registou e deseja receber notícias e novidades, "
-"<strong>registe-se em <a href=\"https://lists.publicknowledgeproject.org/"
-"lists/\" target=\"_blank\">https://lists.publicknowledgeproject.org/lists/</"
+"<strong>registe-se em <a href=\"https://pkp.sfu.ca/dev-updates-signup"
+"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</"
 "a></strong>. Se tiver questões ou comentários, visite o <a href=\"http://"
 "forum.pkp.sfu.ca\" target=\"_blank\">fórum de apoio</a>.</p>"
 
