--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -1209,8 +1209,8 @@ msgstr ""
 "<p>To begin using the system, <a href=\"{$loginUrl}\">login</a> with the "
 "username and password entered on the previous page.</p>\n"
 "<p>If you wish to receive news and updates, <strong>please register at <a "
-"href=\"https://lists.publicknowledgeproject.org/lists/\" target=\"_blank\""
-">https://lists.publicknowledgeproject.org/lists/</a>.</strong> If you have "
+"href=\"https://pkp.sfu.ca/dev-updates-signup\" target=\"_blank\""
+">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> If you have "
 "questions or comments, please visit the <a href=\"https://forum.pkp.sfu.ca\" "
 "target=\"_blank\">support forum</a>.</p>"
 
@@ -1220,9 +1220,9 @@ msgstr ""
 "<p>Don't forget to set the \"installed\" setting in your "
 "<tt>config.inc.php</tt> configuration file back to <em>On</em>.</p>\n"
 "<p>If you haven't already registered and wish to receive news and updates, "
-"<strong>please register at <a href=\"https://lists.publicknowledgeproject."
-"org/lists/\" target=\"_blank\">https://lists.publicknowledgeproject.org/"
-"lists/</a>.</strong> If you have questions or comments, please visit the <a "
+"<strong>please register at <a href=\"https://pkp.sfu.ca/dev-updates-signup"
+"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup"
+"</a>.</strong> If you have questions or comments, please visit the <a "
 "href=\"https://forum.pkp.sfu.ca\" target=\"_blank\">support forum</a>.</p>"
 
 msgid "log.review.reviewDueDateSet"
