--- a/locale/it_IT/locale.po
+++ b/locale/it_IT/locale.po
@@ -1314,8 +1314,8 @@ msgstr ""
 "login</a> con il nome utente e la password inseriti nella pagina precedente."
 "</p>\n"
 "<p>Se vuoi ricevere notizie e aggiornamenti, per favore <strong> registrati "
-"a <a href=\"https://lists.publicknowledgeproject.org/lists/\" target=\"_blank"
-"\">https://lists.publicknowledgeproject.org/lists/</a>.</strong> Se hai "
+"a <a href=\"https://pkp.sfu.ca/dev-updates-signup\" target=\"_blank"
+"\">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> Se hai "
 "domande o commenti da fare, per favore visita il <a href=\"https://forum.pkp."
 "sfu.ca\" target=\"_blank\">forum di supporto</a>.</p>"
 
