--- a/locale/pl_PL/locale.po
+++ b/locale/pl_PL/locale.po
@@ -1294,8 +1294,8 @@ msgstr ""
 "<p>Aby zacząć korzystać z systemu <a href=\"{$loginUrl}\">zaloguj się</a> "
 "loginem i hasłem wprowadzonymi na poprzedniej stronie.</p>\n"
 "<p>Jeśli chciałbyś otrzymywać wiadomości i ostatnie doniesienia "
-"<strong>zarejestruj się na <a href=\"http://lists.publicknowledgeproject.org/"
-"lists/\" target=\"_blank\">lists.publicknowledgeproject.org/lists/</a>.</"
+"<strong>zarejestruj się na <a href=\"https://pkp.sfu.ca/dev-updates-signup"
+"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</a>.</"
 "strong> Jeśli masz pytania lub komentarze, odwiedź <a href=\"https://forum."
 "pkp.sfu.ca\" target=\"_blank\">forum wsparcia</a>.</p>"
 
