--- a/locale/uk_UA/locale.po
+++ b/locale/uk_UA/locale.po
@@ -1295,8 +1295,8 @@ msgstr ""
 "<p>Для початку користування системою <a href=\"{$loginUrl}\">увійдіть</a> із "
 "логіном і паролем, введеними на попередній сторінці.</p>\n"
 "<p>Якщо хочете отримувати новини й оновлення, <strong>зареєструйтеся, будь "
-"ласка, на <a href=\"https://lists.publicknowledgeproject.org/lists/\" target="
-"\"_blank\">https://lists.publicknowledgeproject.org/lists/</a>.</strong> "
+"ласка, на <a href=\"https://pkp.sfu.ca/dev-updates-signup\" target="
+"\"_blank\">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> "
 "Якщо маєте запитання чи коментарі, будь ласка, відвідайте <a href=\"https://"
 "forum.pkp.sfu.ca\" target=\"_blank\">форум підтримки</a>.</p>"
 
