pkp/pkp-lib#8503 Update links after install or upgrade

--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -1208,22 +1208,18 @@ msgstr ""
 "<p>Installation of OMP has completed successfully.</p>\n"
 "<p>To begin using the system, <a href=\"{$loginUrl}\">login</a> with the "
 "username and password entered on the previous page.</p>\n"
-"<p>If you wish to receive news and updates, <strong>please register at <a "
-"href=\"https://pkp.sfu.ca/dev-updates-signup\" target=\"_blank\""
-">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> If you have "
-"questions or comments, please visit the <a href=\"https://forum.pkp.sfu.ca\" "
-"target=\"_blank\">support forum</a>.</p>"
+"<p>Visit our <a href=\"https://forum.pkp.sfu.ca\" target=\"_new\">community forum</a> or "
+"sign up to our <a href=\"https://pkp.sfu.ca/developer-newsletter\" target=\"_new\">developer newsletter</a> "
+"to receive security notices, and updates on upcoming releases, new plugins, and planned features.</p>"
 
 msgid "installer.upgradeComplete"
 msgstr ""
 "<p>Upgrade of OMP to version {$version} has completed successfully.</p>\n"
 "<p>Don't forget to set the \"installed\" setting in your "
 "<tt>config.inc.php</tt> configuration file back to <em>On</em>.</p>\n"
-"<p>If you haven't already registered and wish to receive news and updates, "
-"<strong>please register at <a href=\"https://pkp.sfu.ca/dev-updates-signup"
-"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup"
-"</a>.</strong> If you have questions or comments, please visit the <a "
-"href=\"https://forum.pkp.sfu.ca\" target=\"_blank\">support forum</a>.</p>"
+"<p>Visit our <a href=\"https://forum.pkp.sfu.ca\" target=\"_new\">community forum</a> or "
+"sign up to our <a href=\"https://pkp.sfu.ca/developer-newsletter\" target=\"_new\">developer newsletter</a> "
+"to receive security notices, and updates on upcoming releases, new plugins, and planned features.</p>"
 
 msgid "log.review.reviewDueDateSet"
 msgstr "The due date for the round {$round} review of submission {$submissionId} by {$reviewerName} has been set to {$dueDate}."
