pkp/pkp-lib#8503 Correct URL to match redirect

--- a/locale/it_IT/locale.po
+++ b/locale/it_IT/locale.po
@@ -1315,8 +1315,8 @@ msgstr ""
 "login</a> con il nome utente e la password inseriti nella pagina precedente."
 "</p>\n"
 "<p>Se vuoi ricevere notizie e aggiornamenti, per favore <strong> registrati "
-"a <a href=\"https://pkp.sfu.ca/dev-updates-signup\" target=\"_blank"
-"\">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> Se hai "
+"a <a href=\"https://pkp.sfu.ca/developer-newsletter\" target=\"_blank"
+"\">https://pkp.sfu.ca/developer-newsletter</a>.</strong> Se hai "
 "domande o commenti da fare, per favore visita il <a href=\"https://forum.pkp."
 "sfu.ca\" target=\"_blank\">forum di supporto</a>.</p>"
 
