--- a/locale/cs_CZ/locale.po
+++ b/locale/cs_CZ/locale.po
@@ -1284,8 +1284,8 @@ msgstr ""
 "<p>Chcete-li začít používat systém, <a href=\"{$loginUrl}\">přihlaste se</a> "
 "pomocí uživatelského jména a hesla zadaných na předchozí stránce.</p>\n"
 "<p>Pokud si přejete dostávat novinky a aktualizace, <strong>zaregistrujte se "
-"na <a href=\"https://pkp.sfu.ca/dev-updates-signup\" target="
-"\"_blank\">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> "
+"na <a href=\"https://pkp.sfu.ca/developer-newsletter\" target="
+"\"_blank\">https://pkp.sfu.ca/developer-newsletter</a>.</strong> "
 "Pokud máte dotazy nebo připomínky, navštivte <a href=\"https://forum.pkp.sfu."
 "ca\" target=\"_blank\">fórum podpory</a>.</p>"
 
