--- a/locale/da_DK/locale.po
+++ b/locale/da_DK/locale.po
@@ -1303,8 +1303,8 @@ msgstr ""
 "ind</a> med det brugernavn og adgangskode, der er indtastet på den forrige "
 "side.</p>\n"
 "<p>Hvis du ønsker at modtage nyheder og opdateringer, skal du "
-"<strong>registrere dig på <a href=\"https://pkp.sfu.ca/dev-updates-signup"
-"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</"
+"<strong>registrere dig på <a href=\"https://pkp.sfu.ca/developer-newsletter"
+"\" target=\"_blank\">https://pkp.sfu.ca/developer-newsletter</"
 "a>.</strong>. Hvis du har spørgsmål eller kommentarer, kan du besøge <a href="
 "\"https://forum.pkp.sfu.ca\" target=\"_blank\">supportforum</a>.</p>"
 
