--- a/locale/hr_HR/locale.po
+++ b/locale/hr_HR/locale.po
@@ -1298,8 +1298,8 @@ msgstr ""
 "<p>Za početak korištenja sustava, <a href=\"{$loginUrl}\">prijavite se</a> s "
 "korisničkim imenom i lozinkom unesenim na prethodnoj stranici.</p>\n"
 "<p>Ako želite primati novosti i ažuriranja, <strong>molimo vas da se "
-"registrirate na <a href=\"https://pkp.sfu.ca/dev-updates-signup\" "
-"target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</a>.</"
+"registrirate na <a href=\"https://pkp.sfu.ca/developer-newsletter\" "
+"target=\"_blank\">https://pkp.sfu.ca/developer-newsletter</a>.</"
 "strong> Ako imate pitanja ili komentara, posjetite <a href=\"https://forum."
 "pkp.sfu.ca\" target=\"_blank\">forum za podršku</ a>.</p>"
 
