--- a/locale/pl_PL/locale.po
+++ b/locale/pl_PL/locale.po
@@ -1296,8 +1296,8 @@ msgstr ""
 "<p>Aby zacząć korzystać z systemu <a href=\"{$loginUrl}\">zaloguj się</a> "
 "loginem i hasłem wprowadzonymi na poprzedniej stronie.</p>\n"
 "<p>Jeśli chciałbyś otrzymywać wiadomości i ostatnie doniesienia "
-"<strong>zarejestruj się na <a href=\"https://pkp.sfu.ca/dev-updates-signup"
-"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</a>.</"
+"<strong>zarejestruj się na <a href=\"https://pkp.sfu.ca/developer-newsletter"
+"\" target=\"_blank\">https://pkp.sfu.ca/developer-newsletter</a>.</"
 "strong> Jeśli masz pytania lub komentarze, odwiedź <a href=\"https://forum."
 "pkp.sfu.ca\" target=\"_blank\">forum wsparcia</a>.</p>"
 
