--- a/locale/pt_BR/locale.po
+++ b/locale/pt_BR/locale.po
@@ -1302,8 +1302,8 @@ msgstr ""
 "<p>Para começar a usar o sistema, <a href=\"{$loginUrl}\">faça login</a> com "
 "o nome de usuário e a senha inseridos na página anterior.</p>\n"
 "<p>Se você deseja receber notícias e atualizações, <strong>registre-se em <a "
-"href=\"https://pkp.sfu.ca/dev-updates-signup\" target=\"_blank"
-"\">https://pkp.sfu.ca/dev-updates-signup</a>.</strong> Se você "
+"href=\"https://pkp.sfu.ca/developer-newsletter\" target=\"_blank"
+"\">https://pkp.sfu.ca/developer-newsletter</a>.</strong> Se você "
 "tiver dúvidas ou comentários, visite o <a href=\"https://forum.pkp.sfu.ca\" "
 "target=\"_blank\">fórum de suporte</a href=\"https://forum.pkp.sfu.ca\" "
 "target=\"_blank\"> a>.</p>"
@@ -1316,8 +1316,8 @@ msgstr ""
 "<p>Não se esqueça de definir a configuração \"instalado\" em seu arquivo de "
 "configuração <tt>config.inc.php</tt> de volta para <em>On</em>.</p>\n"
 "<p>Se você ainda não se registrou e deseja receber notícias e atualizações, "
-"<strong>registre-se em <a href=\"https://pkp.sfu.ca/dev-updates-signup"
-"\" target=\"_blank\">https://pkp.sfu.ca/dev-updates-signup</"
+"<strong>registre-se em <a href=\"https://pkp.sfu.ca/developer-newsletter"
+"\" target=\"_blank\">https://pkp.sfu.ca/developer-newsletter</"
 "a>.</strong> Se você tiver dúvidas ou comentários, visite o <a href="
 "\"https://forum.pkp.sfu.ca\" target=\"_blank \">fórum de suporte</a>.</p>"
 
