--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1200,6 +1200,9 @@ msgstr "The press's email signature for automated emails"
 msgid "emailTemplate.variable.context.contactEmail"
 msgstr "The email address of the press's primary contact"
 
+msgid "emailTemplate.variable.context.mailingAddress"
+msgstr "The mailing address of the press"
+
 msgid "emailTemplate.variable.queuedPayment.itemName"
 msgstr "The name of the type of payment"
 
@@ -1211,6 +1214,14 @@ msgstr "The currency of the payment amount, such as USD"
 
 msgid "emailTemplate.variable.site.siteTitle"
 msgstr "Name of the website when more than one press is hosted"
+
+msgid "emailTemplate.variable.statisticsReportNotify.publicationStatsLink"
+msgstr "The link to the books statistics page"
+
+msgid "mailable.statisticsReportNotify.description"
+msgstr ""
+"This email is automatically sent monthly to editors and press managers to "
+"provide them a system health overview."
 
 msgid "mailable.validateEmailContext.name"
 msgstr "Validate Email (Press Registration)"
