pkp/pkp-lib#5730 Copyedit new email templates

--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -107,21 +107,6 @@ msgstr ""
 "Thank you,<br />\n"
 "{$signature}"
 
-msgid "emails.submissionAckNotAuthor.subject"
-msgstr "Submission Acknowledgement"
-
-msgid "emails.submissionAckNotAuthor.body"
-msgstr ""
-"Hello,<br />\n"
-"<br />\n"
-"{$submitterName} has submitted the manuscript, &quot;{$submissionTitle}"
-"&quot; to {$contextName}. <br />\n"
-"<br />\n"
-"If you have any questions, please contact me. Thank you for considering this "
-"press as a venue for your work.<br />\n"
-"<br />\n"
-"{$contextSignature}"
-
 msgid "emails.editorAssign.subject"
 msgstr "You have been assigned as an editor on a submission to {$contextName}"
 
@@ -142,45 +127,40 @@ msgstr "Manuscript Review Request"
 
 msgid "emails.reviewRequest.body"
 msgstr ""
-"Dear {$recipientName},<br />\n"
-"<br />\n"
-"{$messageToReviewer}<br />\n"
-"<br />\n"
-"Please log into the press web site by {$responseDueDate} to indicate whether "
-"you will undertake the review or not, as well as to access the submission "
-"and to record your review and recommendation.<br />\n"
-"<br />\n"
-"The review itself is due {$reviewDueDate}.<br />\n"
-"<br />\n"
-"Submission URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Username: {$recipientUsername}<br />\n"
-"<br />\n"
-"Thank you for considering this request.<br />\n"
-"<br />\n"
-"<br />\n"
-"Sincerely,<br />\n"
-"{$signature}<br />\n"
+"<p>Dear {$recipientName},</p>"
+"<p>I believe that you would serve as an excellent reviewer for a submission  to {$contextName}. The submission's title "
+"and abstract are below, and I hope that you will consider undertaking this important task for us.</p>"
+"<p>If you are able to review this submission, your review is due by {$reviewDueDate}. You can view the submission, "
+"upload review files, and submit your review by logging into the press and following the steps at the link below.</p>"
+"<p><a href=\"{$reviewAssignmentUrl}\">{$submissionTitle}</a></p>"
+"<p><b>Abstract</b></p>"
+"{$submissionAbstract}"
+"<p>Please <a href=\"{$reviewAssignmentUrl}\">accept or decline</a> the review by <b>{$responseDueDate}</b>.</p>"
+"<p>You may contact me with any questions about the submission or the review process.</p>"
+"<p>Thank you for considering this request. Your help is much appreciated.</p>"
+"<p>Kind regards,</p>"
+"{$signature}"
 
 msgid "emails.reviewRequestSubsequent.subject"
 msgstr "Request to review a revised submission"
 
 msgid "emails.reviewRequestSubsequent.body"
 msgstr ""
-"<p>Dear {$recipientName},</p><p>Thank you for your review of <a href="
-"\"{$reviewAssignmentUrl}\">{$submissionTitle}</a>. The authors have "
-"considered the reviewers' feedback and have now submitted a revised version "
-"of their work. I'm writing to ask if you would conduct a second round of "
-"peer review for this submission. {$contextName}.</p><p>If you are able to "
-"review this submission, your review is due by {$reviewDueDate}. You can <a "
-"href=\"{$reviewAssignmentUrl}\">follow the review steps</a> to view the "
-"submission, upload review files, and submit your review comments.<p><p><a "
-"href=\"{$reviewAssignmentUrl}\">{$submissionTitle}</a></p><p>Abstract</"
-"p>{$submissionAbstract}<p>Please accept or decline the review by "
-"{$responseDueDate}.</p><p>Please feel free to contact me with any questions "
-"about the submission or the review process.</p><p>Thank you for considering "
-"this request. Your help is much appreciated.</p><p>Kind regards,</"
-"p>{$signature}"
+"<p>Dear {$recipientName},</p>"
+"<p>Thank you for your review of <a href=\"{$reviewAssignmentUrl}\">{$submissionTitle}</a>. The authors have considered the "
+"reviewers' feedback and have now submitted a revised version of their work. "
+"I'm writing to ask if you would conduct a second round of peer review for this submission.</p>"
+"<p>If you are able to review this submission, your review is due by {$reviewDueDate}. You can "
+"<a href=\"{$reviewAssignmentUrl}\">follow the review steps</a> to view the submission, upload review files, and submit "
+"your review comments.<p>"
+"<p><a href=\"{$reviewAssignmentUrl}\">{$submissionTitle}</a></p>"
+"<p><b>Abstract</b></p>"
+"{$submissionAbstract}"
+"<p>Please <a href=\"{$reviewAssignmentUrl}\">accept or decline</a> the review by <b>{$responseDueDate}</b>.</p>"
+"<p>Please feel free to contact me with any questions about the submission or the review process.</p>"
+"<p>Thank you for considering this request. Your help is much appreciated.</p>"
+"<p>Kind regards,</p>"
+"{$signature}"
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Manuscript Review Request"
@@ -226,17 +206,18 @@ msgstr ""
 "If you have any questions, please contact me."
 
 msgid "emails.reviewReinstate.subject"
-msgstr "Request for Review Reinstated"
+msgstr "Can you still review something for {$contextName}?"
 
 msgid "emails.reviewReinstate.body"
 msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"We would like to reinstate our request for you to review the submission, "
-"&quot;{$submissionTitle},&quot; for {$contextName}. We hope that you will be "
-"able to assist with this press's review process.<br />\n"
-"<br />\n"
-"If you have any questions, please contact me."
+"<p>Dear {$recipientName},</p>"
+"<p>We recently cancelled our request for you to review a submission, {$submissionTitle}, for {$contextName}. "
+"We've reversed that decision and we hope that you are still able to conduct the review.</p>"
+"<p>If you are able to assist with this submission's review, you can <a href=\"{$reviewAssignmentUrl}\">login to the press</a> to view the submission, "
+"upload review files, and submit your review request.</p>"
+"<p>If you have any questions, please contact me.</p>"
+"<p>Kind regards,</p>"
+"{$signature}"
 
 msgid "emails.reviewConfirm.subject"
 msgstr "Able to Review"
@@ -266,54 +247,31 @@ msgstr ""
 "{$senderName}"
 
 msgid "emails.reviewRemind.subject"
-msgstr "Submission Review Reminder"
+msgstr "A reminder to please complete your review"
 
 msgid "emails.reviewRemind.body"
 msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Just a gentle reminder of our request for your review of the submission, "
-"&quot;{$submissionTitle},&quot; for {$contextName}. We were hoping to have "
-"this review by {$reviewDueDate}, and would be pleased to receive it as soon "
-"as you are able to prepare it.<br />\n"
-"<br />\n"
-"If you do not have your username and password for the web site, you can use "
-"this link to reset your password (which will then be emailed to you along "
-"with your username). {$passwordResetUrl}<br />\n"
-"<br />\n"
-"Submission URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Username: {$recipientUsername}<br />\n"
-"<br />\n"
-"Please confirm your ability to complete this vital contribution to the work "
-"of the press. I look forward to hearing from you.<br />\n"
-"<br />\n"
+"<p>Dear {$recipientName},</p>"
+"<p>Just a gentle reminder of our request for your review of the submission, \"{$submissionTitle},\" for {$contextName}. "
+"We were expecting to have this review by {$reviewDueDate} and we would be pleased to receive it as soon as you are "
+"able to prepare it.</p>"
+"<p>You can <a href=\"{$reviewAssignmentUrl}\">login to the press</a> and follow the review steps to view the submission, upload review files, and submit "
+"your review comments.</p>"
+"<p>If you need an extension of the deadline, please contact me. I look forward to hearing from you.</p>"
+"<p>Thank you in advance and kind regards,</p>"
 "{$signature}"
-
-msgid "emails.reviewRemindAuto.subject"
-msgstr "Automated Submission Review Reminder"
 
 msgid "emails.reviewRemindAuto.body"
 msgstr ""
-"{$recipientName}:<br />\n"
-"<br />\n"
-"Just a gentle reminder of our request for your review of the submission, "
-"&quot;{$submissionTitle},&quot; for {$contextName}. We were hoping to have "
-"this review by {$reviewDueDate}, and this email has been automatically "
-"generated and sent with the passing of that date. We would still be pleased "
-"to receive it as soon as you are able to prepare it.<br />\n"
-"<br />\n"
-"If you do not have your username and password for the web site, you can use "
-"this link to reset your password (which will then be emailed to you along "
-"with your username). {$passwordResetUrl}<br />\n"
-"<br />\n"
-"Submission URL: {$reviewAssignmentUrl}<br />\n"
-"<br />\n"
-"Username: {$recipientUsername}<br />\n"
-"<br />\n"
-"Please confirm your ability to complete this vital contribution to the work "
-"of the press. I look forward to hearing from you.<br />\n"
-"<br />\n"
+"<p>Dear {$recipientName}:</p>"
+"<p>This email is an automated reminder from {$contextName} in regards to our request for your review of the submission, "
+"\"{$submissionTitle}.\"</p>"
+"<p>We were expecting to have this review by {$reviewDueDate} and we would be pleased to receive it as soon as you are "
+"able to prepare it.</p>"
+"<p>Please <a href=\"{$reviewAssignmentUrl}\">login to the press</a> and follow the review steps to view the submission, upload review files, and submit "
+"your review comments.</p>"
+"<p>If you need an extension of the deadline, please contact me. I look forward to hearing from you.</p>"
+"<p>Thank you in advance and kind regards,</p>"
 "{$contextSignature}"
 
 msgid "emails.editorDecisionAccept.subject"
@@ -382,10 +340,10 @@ msgid "emails.layoutRequest.body"
 msgstr ""
 "<p>Dear {$recipientName},</p><p>A new submission is ready for layout editing:"
 "</p><p><a href=\"{$submissionUrl}\">{$submissionId} {$submissionTitle}</"
-"a><br />{$contextName}</p><ol><li>1. Click on the Submission URL above.</"
-"li><li>2. Download the Production Ready files and use them to create the "
-"galleys according to the press's standards.</li><li>3. Upload the galleys to "
-"the Publication Formats section of the submission.</li><li>4. Use the "
+"a><br />{$contextName}</p><ol><li>Click on the Submission URL above.</"
+"li><li>Download the Production Ready files and use them to create the "
+"galleys according to the press's standards.</li><li>Upload the galleys to "
+"the Publication Formats section of the submission.</li><li>Use the "
 "Production Discussions to notify the editor that the galleys are ready.</"
 "li></ol><p>If you are unable to undertake this work at this time or have any "
 "questions, please contact me. Thank you for your contribution to this press."
@@ -396,11 +354,13 @@ msgstr "Galleys Complete"
 
 msgid "emails.layoutComplete.body"
 msgstr ""
-"<p>Dear {$recipientName},<p><p>Galleys have now been prepared for the "
-"following submission and are ready for final review.</p><p><a href="
-"\"{$submissionUrl}\">{$submissionTitle}</a><br />{$contextName}</p><p>If you "
-"have any questions, please contact me.</p><p>Kind regards,</"
-"p><p>{$senderName}</p>"
+"<p>Dear {$recipientName},<p>"
+"<p>Galleys have now been prepared for the following submission and are ready for final review.</p>"
+"<p><a href=\"{$submissionUrl}\">{$submissionTitle}</a><br />"
+"{$contextName}</p>"
+"<p>If you have any questions, please contact me.</p>"
+"<p>Kind regards,</p>"
+"<p>{$senderName}</p>"
 
 msgid "emails.indexRequest.subject"
 msgstr "Request Index"
